[tool.poetry]
name = "hw-06"
version = "0.1.0"
description = ""
authors = ["SergiiGoncharov13 <goncharov.s.work@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_06"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
